@@ -1,7 +1,7 @@
 ##
 ##  This is how NCHS does it: postStratify to a table where proportions for by= are specified and then are applied within each cell of over=
 ##
-svystandardize<-function(design, by, over, population, excluding.missing=NULL){
+svystandardize<-function(design, by, over=~1, population, excluding.missing=NULL){
     
     if (!is.null(excluding.missing)){
          mf<-model.frame(excluding.missing, model.frame(design),na.action=na.omit)
@@ -10,8 +10,12 @@ svystandardize<-function(design, by, over, population, excluding.missing=NULL){
     } 
 
     if(is.data.frame(population)) population<-population$Freq
-    
-    freemargins<-as.data.frame(svytable(over, design))
+
+    if (isTRUE(all.equal(over,~1))){
+       freemargins<-data.frame(`_one_`=1, Freq=sum(weights(design, "sampling")))
+    } else {
+       freemargins<-as.data.frame(svytable(over, design))
+    }
     fixedmargins<-as.data.frame(svytable(by,design))
     fixedmargins$Freq<-as.vector(population)/sum(as.vector(population))
     combined<-make.formula(c(attr(terms(by),"term.labels"), attr(terms(over),"term.labels")))
